--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT= 8000
-DATABASE='mongodb://localhost:27017/ecommerce'
+DATABASE='mongodb+srv://demouser1:1YzN5XkgXXAFBKRu@cluster0.fxggk71.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET='dhjajask3444dhffhfhfk'
