--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT= 8000
-DATABASE='mongodb+srv://demouser1:1YzN5XkgXXAFBKRu@cluster0.fxggk71.mongodb.net/?retryWrites=true&w=majority'
-JWT_SECRET='dhjajask3444dhffhfhfk'
+DATABASE='mongodb+srv://testuser555:shakil1997@cluster0.xz33rod.mongodb.net/?retryWrites=true&w=majority'
+# DATABASE = 'mongodb://localhost:27017/inventory'
